# jupyterlite

./: .gitignore  .pre-commit-config.yaml  CNAME  Makefile  Pipfile  README.md  jupyter-lite.json  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yaml  dependabot.yml
.github/workflows/: deploy.yml  python-test.yaml
api/contents/: all.json
api/contents/data/: all.json
api/contents/pyolite/: all.json
api/contents/xeus-lua/: all.json
api/contents/xeus-sqlite/: all.json
api/contents/xeus-wren/: all.json
content/: notebook.ipynb
content/data/: Museums_in_DC.geojson
files/: notebook.ipynb
scripts/: run.sh
