[tool.poetry]
name = "jupyterlite"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# jupyter
ipyleaflet = "^0.19.1"
jupyterlab-geojson = "^3.4.0"
jupyterlab = "^4.3.1"
jupyterlite-core = "^0.3.0"
jupyterlite-pyodide-kernel = "^0.3.2"

# libs
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.1"
pydantic = "^2.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
