[project]
name = "jupyterlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipyleaflet>=0.19.2",
    "jupyterlab>=4.3.2",
    "jupyterlab-geojson>=3.4.0",
    "jupyterlite-core>=0.4.4",
    "jupyterlite-pyodide-kernel>=0.4.4",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "matplotlib>=3.9.3",
    "pydantic>=2.10.3",
]
