[project]
name = "jupyterlite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipyleaflet>=0.20.0",
    "jupyterlab>=4.6.2",
    "jupyterlab-geojson>=3.4.0",
    "jupyterlite-core>=0.7.6",
    "jupyterlite-pyodide-kernel>=0.7.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.12.5",
]
